--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'England -- Fiction'
 - !lcsh 'Theater -- Fiction'
 - !lcsh 'Artists -- Fiction'
+- GITenberg
 title: The Tragic Muse
 url: http://www.gutenberg.org/ebooks/20085
